* Fixed issues with new Footer Sync feature and using Columns element. Make sure to update Layout Builder plugin to v2.0.2, also.
* Fixed "color" value of "typography" option type.
* Fixed bug with not being able to apply background color opacity to display options for columns in the Columns element.
* Various little fixes to Super User theme base and selecting various options.
* Fixed fatal error with WooCommerce.

2.0.0-beta1
-----

* **Updated Theme Blvd framework to 2.5.0**
* Complete frontend theme re-design.
* Added full support for post formats by default.
* Added mega menus, configured from *Appearance > Menus*.
* Added frontend sticky menu by default.
* Added frontend "Scroll to Top" button by default.
* Added frontend floating search box by default.
* Added frontend social icons, by default.
* Added automatic frontend WPML language switcher, if using WPML plugin.
* Added share icons to single posts.
* Added related posts display to single posts.
* Added "Author Box" for author archives and single posts, configured from user profile admin page.
* New mobile menu design, which animates from the side of the device.
* Tons of new framework elements to go with [Layout Builder 2.0](https://wordpress.org/plugins/theme-blvd-layout-builder/changelog/) update.
* Added parallax background support.
* Added slideshow background suppport.
* Sidebars always outputted below content for better SEO, no matter the sidebar layout used.
* New "Theme Base" system at *Appearance > Theme Base*.
* Complete overhaul of Theme Options page and available options.
* Added bbPress compatibility.
* Many new framework option types to integrate with Layout Builder and Theme Options.
* New Import/Export system for Theme Options.
* Added selection of post display type for archive pages, editable from theme options or editing specific categories and tags.
* New Blog post display (new default for blogroll and archives).
* New Post Showcase post display.